--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
+    "autoprefixer": "^10.4.23",
     "next": "^16.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
