--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "autoprefixer": "^10.4.23",
-    "next": "^16.1.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "15.5.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "^8",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
