--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.23",
+    "csv-parse": "^5.5.3",
+    "dotenv": "^17.2.3",
     "next": "15.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +35,7 @@
     "eslint-config-next": "15.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
