--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.23",
     "csv-parse": "^5.5.3",
     "dotenv": "^17.2.3",
