--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
 
 
-  lint:
+  lint-check:
     runs-on: ubuntu-latest
     
     steps:
@@ -59,5 +59,5 @@ jobs:
         run: npm ci
       
       - name: Run ESLint
-        run: npx next lint .
+        run: npm run lint
 
