--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --dir app --dir components --dir lib",
     "seed": "tsx scripts/seed.ts",
     "test": "vitest",
     "test:run": "vitest --run",
