--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx mkdirp out && echo 'Skipped' > out/index.html && exit 0",
     "start": "next start",
     "lint": "eslint \"{app,components,lib}/**/*.{js,jsx,ts,tsx}\"",
     "seed": "tsx scripts/seed.ts",
@@ -55,6 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.5.9",
     "jsdom": "^27.4.0",
+    "mkdirp": "^3.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
